syntax = "proto3";
package user_authorization;
option go_package = "pkg/user_authorization_grpc";

import "google/protobuf/timestamp.proto";

service UserAuthorization {
  rpc Auth(AuthRequest) returns(AuthResponse);
  rpc Register(RegisterRequest) returns(RegisterResponse);
  rpc GetUserByLogin(GetUserByLoginRequest) returns(GetUserByLoginResponse);
  rpc GetUserIdByJWT(GetUserIdByJWTRequest) returns(GetUserIdByJWTResponse);
}

message User {
  string id = 1;
  string email = 2;
  string token = 3;
  google.protobuf.Timestamp registration_date = 4;
  google.protobuf.Timestamp last_login = 5;
}

message RegisterUser {
  string email = 1;
  string password = 2;
  string repeat_password = 3;
}

message AuthUser {
  string email = 1;
  string password = 2;
}

message AuthRequest {
  AuthUser authUser = 1;
}

message AuthResponse {
  User user = 1;
}

message RegisterRequest {
  RegisterUser registerUser = 1;
}

message RegisterResponse {
  User user = 1;
}

message GetUserByLoginRequest {
  string login = 1;
}

message GetUserByLoginResponse {
  User user = 1;
}

message GetUserIdByJWTRequest {
  string token = 1;
}

message GetUserIdByJWTResponse {
  string userId = 1;
}
